@@ -12,8 +12,12 @@ defaults = { 'readingdelta': 10,
              'timedtriggers': [], 
              'weekdays': ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'],
              'weekend': ['Saturday', 'Sunday'],
-             'adjust_temp': True,
-             'factor': 8.199,
+             'which_sensor': 'BME280',
+             'bme_port': 1,
+             'bme_address': 0x76,
+             'bme280_sampling': 4,
+             'sensehat_adjust': True,
+             'sensehat_factor': 8.199,
              'pressuredelta': 180,
              'pressurerapid': 10,
              'pressureregular': 3,
